# faas-rust-runtime

./: .gitignore  Cargo.toml  LICENSE  README.md
cloudevent/: Cargo.toml
cloudevent/src/: http.rs  lib.rs
example_function/: Cargo.toml
example_function/src/: main.rs
faas_rust/: Cargo.toml
faas_rust/src/: common.rs  lib.rs  request_reader.rs  response_writer.rs
faas_rust_macro/: Cargo.toml
faas_rust_macro/src/: handler_gen.rs  input_parsing.rs  lib.rs  types.rs
faas_rust_macro/tests/: test.rs
faas_rust_macro/tests/ui/: 1-input-1-optional-output.rs  1-input-1-output.rs  1-map-output.rs  1-optional-input-1-optional-output.rs  1-optional-input-1-output.rs  1-optional-output.rs  1-vec-input-1-optional-output.rs  1-vec-output.rs  2-input-1-output.rs  2-input-with-optional-1-output.rs  invalid-2-input-with-map-1-output.rs  invalid-2-input-with-map-1-output.stderr  invalid-2-input-with-optional-1-output.rs  invalid-2-input-with-vec-1-output.rs  invalid-2-input-with-vec-1-output.stderr
src/: function.rs  lib.rs  main.rs  request_reader.rs  response_writer.rs  runtime.rs
