[package]
name = "rust-faas"
version = "0.1.0"
authors = ["slinkydeveloper <francescoguard@gmail.com>"]
edition = "2018"

[dependencies]
actix-web = "1.0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "0.1.29"
hostname = "0.1.5"
uuid = { version = "0.8", features = ["serde", "v4"] }
chrono = { version = "0.4", features = ["serde"] }
cloudevent = { path = "/home/francesco/projects/faas-rust-runtime/cloudevent" }

# Activated with --features "external-function" flag
function = { path = "../function", optional = true }

[features]
default = []
external-function = ["function"]