[package]
name = "example_stuff"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "^0.3"
actix-web = "2.0.0-alpha.1"
faas_rust = { path = "../faas_rust"}
faas_rust_macro = { path = "../faas_rust_macro" }
cloudevent = { path = "../cloudevent" }