[package]
name = "faas_rust_macro"
version = "0.1.0"
authors = ["Francesco Guardiani <francescoguard@gmail.com>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
syn = { version = "^1", features = ["full", "extra-traits"] }
quote = "^1"
proc-macro2 = "^1"
regex = "1.3.3"

[dev-dependencies]
trybuild = "^1.0"

# Needed to compile the test functions
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
futures = "^0.3"
actix-web = "2.0.0"
actix-rt = "1.0.0"
faas_rust = { path = "../faas_rust"}
cloudevent = { path = "../cloudevent" }
